--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="sk2-yj-VVR" id="niV-1h-PS2"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="Ha7-U5-buf"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="Ha7-U5-buf">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ArD-Y6-BuS">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="sk2-yj-VVR" id="sTR-Vc-bl8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kkM-u9-lWX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
